@@ -44,7 +44,7 @@ module ElasticAPM
         ['ELASTIC_APM_VERIFY_SERVER_CERT', 'true', true],
         ['ELASTIC_APM_VERIFY_SERVER_CERT', '0', false],
         ['ELASTIC_APM_VERIFY_SERVER_CERT', 'false', false],
-        ['ELASTIC_APM_DISABLED_INSTRUMENTATIONS', 'json,http', %w[json http]],
+        ['ELASTIC_APM_DISABLE_INSTRUMENTATIONS', 'json,http', %w[json http]],
         ['ELASTIC_APM_CUSTOM_KEY_FILTERS', 'Auth,Other', [/Auth/, /Other/]],
         [
           'ELASTIC_APM_DEFAULT_TAGS',
@@ -157,7 +157,7 @@ module ElasticAPM
     it 'has spies and may disable them' do
       expect(Config.new.available_instrumentations).to_not be_empty
 
-      config = Config.new disabled_instrumentations: ['json']
+      config = Config.new disable_instrumentations: ['json']
       expect(config.enabled_instrumentations).to_not include('json')
     end
 
@@ -205,6 +205,21 @@ module ElasticAPM
           expect_any_instance_of(Config)
             .to receive(:warn).with(/Unknown option/)
           Config.new(config_file: 'spec/fixtures/unknown_option.yml')
+        end
+      end
+    end
+
+    context 'DEPRECATED' do
+      describe 'disabled_instrumentations' do
+        subject { Config.new }
+
+        it 'logs a warning and redirects' do
+          expect(subject).to receive(:warn).with(/DEPRECATED/)
+          subject.disabled_instrumentations = ['oh no']
+
+          expect(subject.disable_instrumentations).to eq(['oh no'])
+          expect(subject.disabled_instrumentations)
+            .to eq(subject.disable_instrumentations)
         end
       end
     end
